django.log
nohup: ignoring input
INFO:daphne.server:HTTP/2 support not enabled (install the http2 and tls Twisted extras)
INFO:daphne.server:Configuring endpoint tcp:port=8000:interface=0.0.0.0
CRITICAL:daphne.server:Listen failure: Couldn't listen on 0.0.0.0:8000: [Errno 98] Address already in use.
INFO:django.utils.autoreload:/home/hsblco-01/Documents/Front_liner/project/settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
February 08, 2026 - 17:14:52
Django version 5.2.9, using settings 'project.settings'
Starting ASGI/Daphne version 4.2.1 development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.
INFO:daphne.server:HTTP/2 support not enabled (install the http2 and tls Twisted extras)
INFO:daphne.server:Configuring endpoint tcp:port=8000:interface=0.0.0.0
INFO:daphne.server:Listening on TCP address 0.0.0.0:8000
INFO:django.channels.server:HTTP OPTIONS /api/auth/login/ 200 [0.00, 127.0.0.1:46560]
INFO:django.channels.server:HTTP OPTIONS /api/auth/login/ 200 [0.00, 127.0.0.1:52868]
INFO:django.channels.server:HTTP OPTIONS /api/auth/login/ 200 [0.00, 127.0.0.1:40742]
INFO:django.utils.autoreload:/home/hsblco-01/Documents/Front_liner/project/settings.py changed, reloading.

Performing system checks...

System check identified no issues (0 silenced).
February 09, 2026 - 07:26:31
Django version 5.2.9, using settings 'project.settings'
Starting ASGI/Daphne version 4.2.1 development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.
Traceback (most recent call last):
  File "/home/hsblco-01/Documents/Front_liner/manage.py", line 22, in <module>
    main()
  File "/home/hsblco-01/Documents/Front_liner/manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "/home/hsblco-01/Documents/Front_liner/venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/home/hsblco-01/Documents/Front_liner/venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 382, in execute
    settings.INSTALLED_APPS
  File "/home/hsblco-01/Documents/Front_liner/venv/lib/python3.12/site-packages/django/conf/__init__.py", line 81, in __getattr__
    self._setup(name)
  File "/home/hsblco-01/Documents/Front_liner/venv/lib/python3.12/site-packages/django/conf/__init__.py", line 68, in _setup
    self._wrapped = Settings(settings_module)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/hsblco-01/Documents/Front_liner/venv/lib/python3.12/site-packages/django/conf/__init__.py", line 166, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/hsblco-01/Documents/Front_liner/project/settings.py", line 1
    ('SP_LOGDIR') SP_PREFIX = os.environ.get('SP_PREFIX')
                             ^^^^
SyntaxError: invalid syntax
